# multi-rust-lib-lto-test

./: Makefile  main.c
lib1/: Cargo.toml
lib1/src/: lib.rs
lib2/: Cargo.toml
lib2/src/: lib.rs
